frontend.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: cap-frontend
  namespace: cap 
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  selector:
    matchLabels:
      app: cap 
  template:
    metadata:
      labels:
        app: cap 
    spec:
      containers:
        - name: cap-cont 
          image: chandu554/cap1:v1.1.0
          ports:
            - containerPort: 3015 
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: my-storage
              mountPath: /data/db 
  volumeClaimTemplates:
    metadata:
      - name: my-storage 
    spec:
      accessMode: ["ReadWriteMany"]
      resources:
        requests:
          storage: "2Gi"
      storageClassName: nfs-csi2
