frontend-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: frontend-service 
  namespace: cap
spec: 
  selector: 
    app: cap 
  ports:
    - targetPort: 3015
      port: 3015
  type: ClsuterIP
