Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway 
metadata: 
  name: gateway
  namespace: cap 
spec:
  gatewayClassName: kgateway 
  listeners: #
  - name: http 
    protocol: HTTP 
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
